apps/rmfakecloud/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: rmfakecloud
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: rmfakecloud
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rmfakecloud-ingress
  namespace: rmfakecloud
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/controller: rmfakecloud
      app.kubernetes.io/instance: rmfakecloud
      app.kubernetes.io/name: rmfakecloud
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: public
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
            - port: "8883"
              protocol: TCP
